# mcp-simple-server

./: DEVELOPMENT.md  README.md  pyproject.toml  requirements.txt
mcp_simple_server/: __init__.py  config.py  logging_config.py
mcp_simple_server/client/: __init__.py  app.py
mcp_simple_server/scripts/: send_requests.py
mcp_simple_server/server/: __init__.py  app.py
mcp_simple_server/tools/: echo.py
