[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp_simple_server"
version = "0.1.0"
description = "An MCP-compatible simple server implementation"
readme = "README.md"
authors = [
    {name = "Niccolò Silicani", email = "niccolo.silicani@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.11,<3.13"
dependencies = [
    "mcp>=1.0.0",
    "mcp[cli]>=1.0.0",
    "anyio>=4.5",
    "starlette>=0.36.0",
    "uvicorn>=0.27.0",
]

[project.scripts]
# Single entry point for server that handles both transports
mcp_simple_server-server = "mcp_simple_server.server.app:main"
mcp_simple_server-client = "mcp_simple_server.client.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_simple_server*"]
namespaces = false 